--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ body{
 /* Style général pour la grille */
 .all {
   display: grid;
-  grid-template-columns: 25% 75%; /* Taille des colonnes en mode bureau */
+  grid-template-columns: 30% 70%; /* Taille des colonnes en mode bureau */
   gap: 10px;
 }
 
@@ -439,11 +439,11 @@ body{
 
 /* Section de gauche */
 .leftC {
-  padding: 10px;
-  margin-left: 45px;
+  padding: 1px;
+  margin-left: 30px;
   margin-top: 35px;
   position: sticky;
-  top: 95px;
+  top: 25px;
   align-self: start;
 }
 
@@ -469,13 +469,13 @@ p {
 
 /* Section de droite */
 .rightC {
-  padding: 20px;
-  margin-right: 45px;
+  padding: 15px;
+  margin-right: 30px;
   margin-top: 35px;
 }
 
 .mag {
-  padding: 20px;
+  padding: 5px;
   justify-self: end;
 }
 
@@ -582,6 +582,8 @@ p {
 
 .slide {
   width: 100%;
+  align-items: center;
+  justify-content: center
 }
 
 .carousel-text {
@@ -594,7 +596,7 @@ p {
 
 .carousel-container {
   position: relative;
-  width: 75%;
+  width: 85%;
   max-width: 100%;
   overflow: hidden;
   display: flex;
@@ -604,7 +606,7 @@ p {
 }
 
 .carousel-container img {
-  width: 70%;
+  width: 79%;
 }
 
 
@@ -619,7 +621,7 @@ p {
 .CDISP{
   position: relative;
   width: 55%; /* Ajustez pour que l’image soit plus à droite */
-  max-width: 90%;
+  max-width: 100%;
   margin-left: 22%; /* Permet de centrer ou de déplacer l’image à droite */
   margin-right: 20px; /* Ajustez selon l’espace voulu à droite */
   overflow: hidden;
